bk_ida/gccida/g1/reload
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1147:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1147:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1148:4: error: expected ';' after expression
rtx v14; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1148:5: error: use of undeclared identifier 'v14'
rtx v14; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1154:6: error: use of undeclared identifier 'v20'
rtx *v20; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1155:6: error: use of undeclared identifier 'v21'; did you mean 'v11'?
rtx *v21; // rbp 
     ^~~
     v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1145:9: note: 'v11' declared here
__int16 v11; // ax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1155:5: error: invalid operands to binary expression ('struct rtx_def *' and 'short')
rtx *v21; // rbp 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1156:6: error: use of undeclared identifier 'v22'
rtx *v22; // r15 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1159:6: error: use of undeclared identifier 'v25'
rtx *v25; // rbp 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1168:4: error: expected ';' after expression
rtx k; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1168:5: error: use of undeclared identifier 'k'
rtx k; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1170:4: error: expected ';' after expression
rtx m; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1170:5: error: use of undeclared identifier 'm'
rtx m; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1178:4: error: expected ';' after expression
rtx v44; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1178:5: error: use of undeclared identifier 'v44'
rtx v44; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1187:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1187:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1189:4: error: expected ';' after expression
rtx v55; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/reload1.c:1189:5: error: use of undeclared identifier 'v55'
rtx v55; // rsi 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload/src/obj/reload1.o] Error 1
